# rust_c3

./: Cargo.toml
src/: c3_a.npy  c3_color.npy  c3_t.npy  lib.rs  main.rs
